Update UI, Backend

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,32 @@
   line-height: 1.5;
   font-weight: 400;
 }
+
+
+html, body {
+  font-size: 14px;
+} 
+
+.space-mono-regular {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.space-mono-bold {
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.space-mono-regular-italic {
+  font-family: "Space Mono", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.space-mono-bold-italic {
+  font-family: "Space Mono", monospace;
+  font-weight: 700;
+  font-style: italic;
+}
